--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -85,11 +85,11 @@ a {
   }
 
   &__main-l {
-    border-right: 1px solid $bdc;
+    // border-right: 1px solid $bdc;
   }
 
   &__main-r {
-    border-left: 1px solid $bdc;
+    // border-left: 1px solid $bdc;
   }
 
   &__main-m {
@@ -103,6 +103,7 @@ a {
     // margin-top:73px;
     // background-color: darken($bgc-accent, 10%);
     background-color: $bgc-accent;
+    border-inline: 1px solid $bdc;
   }
 }
 
@@ -195,11 +196,12 @@ a {
 /*                                Form Display                                */
 /* -------------------------------------------------------------------------- */
 .display-form {
-  $bdr: 8px;
+  // $bdr: 8px;
+  $bdr: 0px;
 
   flex-grow: 1;
   width: 100%;
-  margin-top: 50px;
+  // margin-top: 50px;
   // background-color: darken($bgc-accent, 10%);
 
   input,
@@ -344,7 +346,8 @@ a {
     }
 
     &-require {
-      margin: 0 5px 4px 5px;
+      // margin: 0 5px 4px 5px;
+      margin-inline: 5px;
       // color: $clr-rrd;
       color: $clr-sub;
     }
@@ -365,6 +368,9 @@ a {
         width: 25%;
       }
 
+      &--cb {
+      }
+
       &::placeholder {
         color: $clr-sub;
       }
@@ -378,6 +384,18 @@ a {
         flex-flow: row nowrap;
         gap: 5px;
         margin-bottom: 10px;
+      }
+    }
+
+    .privacy-input-box {
+      display: flex;
+      justify-items: center;
+      align-items: center;
+      flex-flow: row nowrap;
+      gap: 5px;
+
+      label {
+        font-size: 13px;
       }
     }
 
@@ -431,7 +449,7 @@ a {
 /*                                Configuration                               */
 /* -------------------------------------------------------------------------- */
 .config {
-  padding: 15px 0 15px 10px;
+  padding: 15px 0 15px 15px;
 
   &__box {
     display: flex;
@@ -447,6 +465,10 @@ a {
   }
 
   &__title {
+    // white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+
     &-note {
       color: $clr-sub;
       margin-bottom: 15px;
@@ -501,7 +523,25 @@ a {
 
   &__button {
     width: 100%;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
+}
+
+/* -------------------------------------------------------------------------- */
+/*                                   Divider                                  */
+/* -------------------------------------------------------------------------- */
+.divider {
+  border: 0;
+  border-top: 1px dotted $bdc;
+  margin-block: 10px;
+}
+
+// TODO: Delete!
+.test {
+  overflow-wrap: break-word;
 }
 
 /* -------------------------------------------------------------------------- */
