--- a/src/css/main.css
+++ b/src/css/main.css
@@ -58,7 +58,12 @@ a {
   flex-flow: column nowrap;
   transition: all 0.3s;
   scrollbar-gutter: stable;
+}
+.main__main-l {
   width: 245px;
+}
+.main__main-r {
+  width: 260px;
 }
 .main__main-m {
   flex-grow: 1;
@@ -67,7 +72,7 @@ a {
   align-items: center;
   flex-flow: column nowrap;
   position: relative;
-  width: 560px;
+  width: 545px;
   background-color: #f1f1f1;
   border-inline: 1px solid #d1d1d1;
 }
@@ -296,6 +301,13 @@ a {
 .display-form__item .privacy-input-box label {
   font-size: 13px;
 }
+.display-form__item .radio-input-box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: row wrap;
+  gap: 5px;
+}
 .display-form__item--active {
   background-color: #f9f9f9;
 }
@@ -341,7 +353,7 @@ a {
 /*                                Configuration                               */
 /* -------------------------------------------------------------------------- */
 .config {
-  padding: 15px 0 15px 15px;
+  padding: 15px;
 }
 .config__box {
   display: flex;
