--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,7 +57,7 @@ a {
   display: flex;
   flex-flow: column nowrap;
   transition: all 0.3s;
-  scrollbar-gutter: stable;
+  z-index: 20;
 }
 .main__main-l {
   width: 245px;
@@ -73,8 +73,8 @@ a {
   flex-flow: column nowrap;
   position: relative;
   width: 545px;
-  background-color: #f1f1f1;
   border-inline: 1px solid #d1d1d1;
+  z-index: 10;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -115,7 +115,7 @@ a {
 .form-list__button {
   all: unset;
   width: 100%;
-  padding: 13px 0;
+  padding-block: 13px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
@@ -140,7 +140,7 @@ a {
   color: #adadad;
 }
 .form-list__icon {
-  margin-bottom: 5px;
+  font-size: 18px;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -205,11 +205,11 @@ a {
   background-color: #ffffff;
   border-inline: 1px solid #d1d1d1;
   border-bottom: 1px dashed #d1d1d1;
-  transition: all 0.3s;
 }
 .display-form__item:hover {
   background-color: #f1f1f1;
-  background-color: #f9f9f9;
+  background-color: #f7f7f7;
+  background-color: #f7f7f7;
 }
 .display-form__item:hover .display-form__item-icon:nth-child(1) {
   color: #464646;
@@ -303,7 +303,8 @@ a {
 }
 .display-form__item .radio-input-box,
 .display-form__item .date-input-box,
-.display-form__item .date-input-box__item {
+.display-form__item .date-input-box__item,
+.display-form__item .file-input-box__box {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -320,8 +321,19 @@ a {
 .display-form__item .date-input-box__item {
   gap: 10px;
 }
+.display-form__item .file-input-box p {
+  font-size: 12px;
+  color: #adadad;
+  margin-bottom: 7px;
+}
+.display-form__item .file-input-box__button {
+  font-size: 12px;
+  padding: 3px 10px;
+  border-radius: 5px;
+  background-color: #dfdfdf;
+}
 .display-form__item--active {
-  background-color: #f9f9f9;
+  background-color: #f7f7f7;
 }
 .display-form__item--active .display-form__item-icon {
   color: #464646;
@@ -397,12 +409,14 @@ a {
   justify-content: flex-start;
   align-items: center;
   flex-flow: row nowrap;
-  gap: 4px;
+  gap: 15px;
 }
 .config__item .item-label {
   display: block;
   font-weight: 700;
   letter-spacing: 1px;
+  text-transform: capitalize;
+  font-size: 13px;
 }
 .config__item .item-input {
   outline: none;
